--- a/stylish.css
+++ b/stylish.css
@@ -27,9 +27,9 @@ color: aliceblue;
 max-width: 600px;
 }
 .banner{
-background-image: url:("hero-bg.png");
+background-image: url("hero-bg.png");
 text-align: center;
-border: 1px solid;
+bor
 margin: 40px 80px;
 
 
@@ -50,7 +50,6 @@ color:
 display: flex;
 width: 1600px;
 height: 840px;
-border: 1px solid;
 gap: 60px;
 }
 
@@ -89,7 +88,7 @@ font-size: 3em;
 .card{
     width: 322px;
     height: 300px;
-    border: 1px solid;
+    
     background-color: #ffffff;
     justify-items: center;
     margin: 10px 15px;
@@ -162,5 +161,8 @@ justify-content: center;
 .see{
     background-color: #30b868;
     color: #F7F6F2;
+    padding: 10px 5px;
+}
+.ok{
     padding: 10px 5px;
 }
